# ChangeLog for dev-util/gquilt
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/gquilt/ChangeLog,v 1.6 2005/07/14 10:01:28 ka0ttic Exp $

*gquilt-0.11 (14 Jul 2005)

  14 Jul 2005; Aaron Walker <ka0ttic@gentoo.org> -gquilt-0.08.ebuild,
  -gquilt-0.10.ebuild, +gquilt-0.11.ebuild:
  Version bump; tidy old ebuilds.

*gquilt-0.10 (12 Jul 2005)

  12 Jul 2005; Aaron Walker <ka0ttic@gentoo.org> +gquilt-0.10.ebuild:
  Version bump.

*gquilt-0.08 (06 Jul 2005)

  06 Jul 2005; Aaron Walker <ka0ttic@gentoo.org>
  -files/gquilt-0.06-fix-makefile.diff, -gquilt-0.06.ebuild,
  -gquilt-0.07.ebuild, +gquilt-0.08.ebuild:
  Version bump; tidy old ebuilds.

*gquilt-0.07 (30 Jun 2005)

  30 Jun 2005; Aaron Walker <ka0ttic@gentoo.org> +gquilt-0.07.ebuild:
  Version bump.

  21 Jun 2005; David Holm <dholm@gentoo.org> gquilt-0.06.ebuild:
  Added to ~ppc.

*gquilt-0.06 (20 Jun 2005)

  20 Jun 2005; Aaron Walker <ka0ttic@gentoo.org>
  +files/gquilt-0.06-fix-makefile.diff, +metadata.xml, +gquilt-0.06.ebuild:
  Initial commit.  Ebuild based on one submitted by Andrew Fink in bug 94340.
