@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/gquilt
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/gquilt/ChangeLog,v 1.6 2005/07/14 10:01:28 ka0ttic Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/gquilt/ChangeLog,v 1.7 2005/07/22 12:23:15 ka0ttic Exp $
+
+*gquilt-0.12 (22 Jul 2005)
+
+  22 Jul 2005; Aaron Walker <ka0ttic@gentoo.org> +gquilt-0.12.ebuild:
+  Version bump.
 
 *gquilt-0.11 (14 Jul 2005)
 
